syntax = "proto3";

import "google/protobuf/empty.proto";

package meteorite;
option go_package = "yudhistira.dev/demo/meteorite/grpc/api";

message GeoLocation {
    string type = 1;
    repeated double coordinates = 2;
}

message MeteoriteLanding {
    string id = 1;
    string name = 2;
    string fall = 3;
    GeoLocation geolocation = 4;
    string mass = 5;
    string nametype = 6;
    string recclass = 7;
    string reclat = 8;
    string reclong = 9;
    string year = 10;
}

message MeteoriteLandingList {
    repeated MeteoriteLanding meteoriteLanding = 1;
}

service MeteoriteLandingsService {
    rpc GetMeteorite(google.protobuf.Empty) returns (MeteoriteLandingList) {}
}